fix: improve home page load time and readability

--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -59,8 +59,6 @@
 
     h2 {
         color: $darkRed;
-        font-family: $family-serif;
-        font-style: italic;
         margin-block: 1rem;
         text-align: center;
     }
